# catan-frontier-settlements

./: README.md  q
Catan/: .clang-tidy  CMakeLists.txt  CODEOWNERS  catanhexwidget.cpp  catanhexwidget.h  main.cpp  vcpkg.json  widget.cpp
Catan/app/: CMakeLists.txt  main.cpp
Catan/appClient/: CMakeLists.txt  main.cpp  testmain.cpp
Catan/appServer/: CMakeLists.txt  main.cpp
Catan/code/AsciiView/: BoardView.cpp  BoardView.hpp  EdgeView.cpp  NodeView.cpp  NodeView.hpp  RoadView.cpp  RoadView.hpp  TileView.cpp  TileView.hpp
Catan/code/Model/: Board.cpp  BuildCityMove.cpp  Edge.cpp  EndTurnMove.cpp  GameModel.cpp  GameSession.cpp  GameState.cpp  Move.cpp  Node.cpp  Player.cpp  Tile.cpp
Catan/controller/: AbstractApplet.hpp  ApplicationRoot.cpp  ApplicationRoot.hpp  CMakeLists.txt  RoleEnum.hpp  RoleType.hpp
Catan/controller/common/: AbstractApplet.hpp  ApplicationRoot.cpp  ApplicationRoot.hpp  NetworkService.hpp  PathService.hpp
Catan/controller/game/: ClientController.cpp  ClientController.hpp  GameApp.cpp  GameApp.hpp  GameController.cpp  GameController.hpp
Catan/controller/history/: HistoryApp.hpp
Catan/controller/host-join/: HostJoinApp.cpp  HostJoinApp.hpp  HostJoinController.cpp  HostJoinController.hpp  RoleType.hpp
Catan/controller/lobby/: LobbyApp.cpp  LobbyApp.hpp  LobbyController.cpp  LobbyController.hpp
Catan/controller/menu/: MenuApp.cpp  MenuApp.hpp
Catan/controller/renderstate/: BoardRenderState.cpp  BoardRenderState.h  ButtonsRenderState.cpp  ButtonsRenderState.h  ChoosePlayerRenderState.cpp  ChoosePlayerRenderState.h  PopupRenderState.cpp  PopupRenderState.hpp  RenderState.h  ToolbarRenderState.cpp  ToolbarRenderState.h
Catan/game/: CMakeLists.txt
Catan/game/board/: Board.cpp  Board.h  BoardData.h  CMakeLists.txt  Edge.cpp  Edge.h  Node.cpp  Node.h  Tile.cpp  Tile.h
Catan/game/gamemodel/: GameConfig.cpp  GameConfig.h  GameData.cpp  GameData.h  GameModel.cpp  GameModel.h  GameSession.cpp  GameSession.h
Catan/game/model/: CMakeLists.txt  GameConfig.cpp  GameConfig.h  GameData.cpp  GameData.h  GameSession.cpp  GameSession.h  MoveCosts.cpp  MoveCosts.h  Trade.h
Catan/game/move/: BankTradeMove.cpp  BankTradeMove.h  BoardMove.h  BuildCityMove.cpp  BuildCityMove.h  BuildRoadMove.cpp  BuildRoadMove.h  BuildSettlementMove.cpp  BuildSettlementMove.h  CMakeLists.txt  EndTurnMove.cpp  EndTurnMove.h  Move.cpp  Move.h  MoveToString.cpp  MoveToString.h  MoveType.h  PlayerTradeMove.cpp  PlayerTradeMove.h  RollDiceMove.cpp  RollDiceMove.h  SetRobberMove.cpp  SetRobberMove.h  SettingRobberMove.h
Catan/game/phase/: CMakeLists.txt  TurnPhase.h
Catan/game/player/: Bank.cpp  Bank.h  CMakeLists.txt  Player.cpp  Player.h  ResourceHolder.cpp  ResourceHolder.h
Catan/game/rules/: CMakeLists.txt  GameOverRule.cpp  GameOverRule.h  LargestArmyRule.cpp  LargestArmyRule.h  LongestRoadRule.cpp  LongestRoadRule.h  Rule.h  RulesEngine.cpp  RulesEngine.h  SkipPlayerRule.cpp  SkipPlayerRule.hpp  VictoryRule.cpp  VictoryRule.h
Catan/game/types/: BoardType.hpp  CMakeLists.txt  Costs.h  DevCardType.h  DevType.h  Directions.h  MapType.h  NodeType.h  ResourceType.h  ToolbarActionType.h  TypeAliases.h
Catan/gui/: CMakeLists.txt
Catan/gui/ascii/: CMakeLists.txt  EdgeView.cpp  TileView.hpp
Catan/gui/asciiview/: AsciiGameWindow.cpp  AsciiGameWindow.hpp  BoardView.cpp  BoardView.hpp  CMakeLists.txt  EdgeView.cpp  EdgeView.hpp  NodeView.cpp  TileView.cpp  TileView.hpp  ViewTypes.hpp
Catan/gui/qt/: BoardToolbar.cpp  BoardToolbar.h  CMakeLists.txt  CardSpec.h  CostPopup.cpp  CostPopup.h  FloatingPanel.h  GameDetailsView.cpp  GameDetailsView.h  GameHistory.cpp  GameHistory.h  GameTheme.cpp  GameTheme.h  MainMenu.cpp  MainMenu.h  QBoard.cpp  QBoard.h  QCard.cpp  QCardRow.h  QEdge.cpp  QEdge.h  QMenu.cpp  QMenu.h  QNode.cpp  QNode.h  QRightSideBar.cpp  QRightSideBar.h  QTile.cpp  QTile.h  RightOverlay.cpp  RightOverlay.h  catanbuttons.qss  catanhexwidget.h  gamedetailsview.cpp  gamedetailsview.h  gamehistory.cpp  gamehistory.h  mainwindow.ui  resources.qrc  widget.cpp  (+1 more)
Catan/headers/: Board.h  BuildCityMove.h  Edge.h  EndTurnMove.h  GameModel.h  GameSession.h  GameState.h  Move.h  Node.h  Player.h  ResourceType.h  RollDiceMove.h  Tile.h  TradeMove.h
Catan/headers/Board/: Board.h  Edge.h  Node.h  Tile.h
Catan/headers/Game/: GameModel.h  GameSession.h  GameState.h
Catan/headers/Move/: BankTradeMove.h  BuildCityMove.h  BuildRoadMove.h  BuildSettlementMove.h  EndTurnMove.h  Move.h  PlayerTradeMove.h  RollDiceMove.h  SettingRobberMove.h
Catan/headers/Player/: Bank.h  Player.h  ResourceHolder.h
Catan/headers/Types/: Costs.h  DevType.h  DevType.hpp  ResourceType.h  TypeAliases.hpp
Catan/libs/: CMakeLists.txt  json.hpp  nlohmann-json.rights
Catan/network/: CMakeLists.txt  GameNetwork.cpp  GameNetwork.h  MessageFramer.cpp  MessageFramer.h  MoveProtoFactory.cpp  MoveProtoFactory.h  MoveProtoSerializer.cpp  MoveProtoSerializer.h  NetworkTransport.cpp
Catan/network/client/: CMakeLists.txt  GameNetworkAdapter.cpp  GameNetworkAdapter.h  HostJoinNetworkAdapter.cpp  HostJoinNetworkAdapter.hpp  INetworkAdapter.cpp  INetworkAdapter.hpp  LobbyNetworkAdapter.cpp  LobbyNetworkAdapter.hpp
Catan/network/dto-translation/: CMakeLists.txt
Catan/network/message-transport/: CMakeLists.txt  MessageFramer.cpp  NetworkTransport.cpp  NetworkTransport.h
Catan/network/move-translation/: MoveProtoFactory.cpp  MoveProtoFactory.h  MoveProtoSerializer.h
Catan/resources/: CMakeLists.txt  INetworkAdapter.cpp  INetworkAdapter.hpp  catan.txt  client.ini  history.json
Catan/tests/: BankTest.cpp  BankTradeTest.cpp  BoardTest.cpp  BuildCityMoveTest.cpp  BuildRoadMoveTest.cpp  BuildSettlementMoveTest.cpp  BuyDevCardMoveTest.cpp  CMakeLists.txt  DiscardCardsMoveTest.cpp  EndTurnMoveTest.cpp  LargestArmyRuleTest.cpp  LongestRoadRuleTest.cpp  MonopolyMoveTest.cpp  PlayDevCardMoveTest.cpp  PlayerLeaveMoveTest.cpp  PlayerTest.cpp  PlayerTradeTest.cpp  RollDiceMoveTest.cpp  RollDiceMoveTests.cpp  SetRobberMoveTest.cpp  StealCardMoveTest.cpp  TestHelper.h  YearOfPlentyMoveTest.cpp
(+337 files in other folders)
