add_library(catan_game
        board/Edge.h
        board/Tile.h
        board/Edge.h
        types/NodeType.h
        player/Player.cpp
        player/Player.h
        board/Board.cpp
        board/Board.h
        move/Move.cpp
        move/Move.h
        move/build/BuildRoadMove.cpp
        move/build/BuildRoadMove.h
        move/build/BuildSettlementMove.cpp
        move/build/BuildSettlementMove.h
        move/build/BuildCityMove.cpp
        move/build/BuildCityMove.h
        move/turn/RollDiceMove.cpp
        move/turn/RollDiceMove.h
        move/turn/EndTurnMove.cpp
        move/turn/EndTurnMove.h
        gamemodel/GameSession.cpp
        gamemodel/GameSession.h
        types/TypeAliases.h
        types/DevCardType.h
        board/Board.cpp
        types/Costs.h
        player/Bank.cpp
        board/Coords/AxialCoords.cpp
        board/Coords/AxialCoords.hpp
        board/Coords/ElementCoords.hpp
        types/Directions.h
        board/Coords/EdgeCoords.cpp
        board/Coords/EdgeCoords.hpp
        board/Coords/NodeCoords.cpp
        board/Coords/NodeCoords.hpp
        board/BoardFactory/AbstractBoardCreator.hpp
        board/BoardFactory/BoardCatalog.hpp
        board/BoardSerializers/BoardLayoutToJson.cpp
        board/BoardSerializers/BoardLayoutToJson.hpp
        board/BoardSerializers/AbstractBoardSerializer.hpp
        board/BoardFactory/RandomStandardMapCreator.cpp
        board/BoardFactory/RandomStandardMapCreator.hpp
        board/BoardFactory/RandomExtendedMapCreator.cpp
        board/BoardFactory/RandomExtendedMapCreator.hpp
        board/BoardFactory/LoadFromFileCreator.cpp
        board/BoardFactory/LoadFromFileCreator.hpp
        move/trade/BankTradeMove.h
        move/robber/SetRobberMove.h
        move/trade/BankTradeMove.cpp
        gamemodel/GameData.h
        gamemodel/GameData.cpp
        types/ResourceType.h
        rules/Rule.h
        rules/LargestArmyRule.cpp
        rules/LargestArmyRule.h
        rules/LongestRoadRule.cpp
        rules/LongestRoadRule.h
        rules/VictoryRule.cpp
        rules/VictoryRule.h
        rules/RulesEngine.cpp
        rules/RulesEngine.h
        gamemodel/GameConfig.cpp
        gamemodel/GameConfig.h
        types/MapType.h
        board/Edge.cpp
        phase/TurnPhase.h
        move/robber/DiscardCardsMove.cpp
        move/robber/DiscardCardsMove.h
        move/robber/StealCardMove.cpp
        move/robber/StealCardMove.h
        move/devcard/BuyDevCardMove.cpp
        move/devcard/BuyDevCardMove.h
        move/devcard/YearOfPlentyMove.cpp
        move/devcard/YearOfPlentyMove.h
        move/devcard/MonopolyMove.cpp
        move/devcard/MonopolyMove.h
        move/devcard/PlayDevCardMove.cpp
        move/devcard/PlayDevCardMove.h
        move/MoveType.h
        move/trade/PlayerTradeRequestMove.cpp
        move/trade/PlayerTradeRequestMove.h
        move/trade/PlayerTradeResponseMove.cpp
        move/trade/PlayerTradeResponseMove.h
        move/robber/SetRobberMove.cpp
        gamemodel/Trade.h
        move/trade/PlayerTradeAcceptMove.cpp
        move/trade/PlayerTradeAcceptMove.h
        types/ToolbarActionType.h
)

target_include_directories(catan_game
        PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(catan_game
        PUBLIC
        catan_libs
)

target_compile_features(catan_game PUBLIC cxx_std_17)
